trunk/Archive2/f3/6ac097578d8f05/output
main.cpp:1:25: error: 'x' was not declared in this scope
 void f(int x = decltype(x){});
                         ^
main.cpp:1:25: error: 'x' was not declared in this scope
